# davinci-resolve-mcp

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/davinci_resolve_mcp/: AGENTS.md  __init__.py  resolve_api.py  server.py
tests/: test_imports.py
